# ingress

./: Cargo.toml  README.md  back-deployment.yml  back-service.yml  back.Dockerfile  front-deployment.yml  front-permissions.yml  front-service.yml  front.Dockerfile  ingress.fish  ingress.md  test-ingress.yml
back/: Cargo.toml
back/src/: main.rs
front/: Cargo.toml
front/src/: lib.rs  main.rs  proxy.rs
grpc/: Cargo.toml  back.proto  build.rs
