[package]
name = "front"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc                  = { path = "../grpc"                                                     }

anyhow                = { version = "1.0", features = ["backtrace"]                            }
clap                  = { version = "4", features = ["derive"]                                 }
env_logger            = { version = "0.10"                                                     }
log                   = { version = "0.4"                                                      }
chrono                = { version = "0.4"                                                      }
tokio                 = { version = "1"  , features = ["full"]                                 }
tonic                 = { version = "0.11"                                                     }
