[package]
name = "front"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc                   = { path = "../grpc"                                                     }

async-trait            = { version = "0.1"                                                      }
anyhow                 = { version = "1.0", features = ["backtrace"]                            }
clap                   = { version = "4", features = ["derive"]                                 }
env_logger             = { version = "0.10"                                                     }
log                    = { version = "0.4"                                                      }
chrono                 = { version = "0.4"                                                      }
tokio                  = { version = "1"  , features = ["full"]                                 }
tonic                  = { version = "0.11"                                                     }
kube                   = { version = "0.91",  features = ["runtime"]                            }
k8s-openapi            = { version = "0.22",  features = ["v1_29"]                              }
futures                = { version = "0.3"                                                      }
thiserror              = { version = "1.0"                                                      }

pingora                = { version = "0.1",   features = ["openssl", "proxy"]                 }
pingora-proxy          = { version = "0.1"                                                    }
pingora-runtime        = { version = "0.1"                                                    }
pingora-core           = { version = "0.1"                                                    }
pingora-error          = { version = "0.1"                                                    }
pingora-http           = { version = "0.1"                                                    }
pingora-load-balancing = { version = "0.1"                                                    }
structopt              = { version = "0.3"                                                    }
openssl                = { version = "0.10"                                                   }
http                   = { version = "1.1"                                                    }
